<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".view.MainActivity">

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Modo escuro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt_titulo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/editTextPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:textColorHint="@color/inputNome"
        android:hint="@string/txt_hint_primeiro_nome"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <EditText
        android:id="@+id/editTextSobrenome"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txt_hint_sobrenome"
        android:inputType=""
        app:layout_constraintTop_toBottomOf="@+id/editTextPrimeiroNome" />

    <EditText
        android:id="@+id/editTextNomeCurso"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txt_hint_nome_curso"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editTextSobrenome" />

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txt_hint_telefone"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCurso" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/txt_button_limpar"
        android:tooltipText="Limpar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/txt_button_salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

    <Button
        android:id="@+id/buttonFinalizar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:text="@string/txt_button_finalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefone" />

</androidx.constraintlayout.widget.ConstraintLayout>